--- a/src/pyramit5/FXMLGame.fxml
+++ b/src/pyramit5/FXMLGame.fxml
@@ -5,7 +5,9 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1080.0" styleClass="bodybg" stylesheets="@backgroundGreen.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pyramit5.FXMLGameController">
     <children>
@@ -47,15 +49,24 @@
                 <Font name="Verdana Pro Cond Semibold" size="23.0" />
             </font>
         </Button>
-        <Label layoutX="886.0" layoutY="99.0" prefHeight="42.0" prefWidth="115.0" text="SCORE : " textFill="WHITE">
-            <font>
-                <Font name="Rockwell Nova Light Italic" size="19.0" />
-            </font>
-        </Label>
         <Label layoutX="845.0" layoutY="47.0" prefHeight="42.0" prefWidth="115.0" text="TIME :" textFill="WHITE">
             <font>
                 <Font name="Rockwell Nova Light Italic" size="26.0" />
             </font>
         </Label>
+      <HBox alignment="CENTER" layoutX="860.0" layoutY="47.0" prefHeight="100.0" prefWidth="200.0">
+         <children>
+              <Label prefHeight="42.0" prefWidth="76.0" text="SCORE : " textFill="WHITE">
+                  <font>
+                      <Font name="Rockwell Nova Light Italic" size="19.0" />
+                  </font>
+              </Label>
+            <Text fx:id="playerscore" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="98.99999999999994">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Text>
+         </children>
+      </HBox>
     </children>
 </AnchorPane>
